--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,11 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/anotherstickybit/DependencyInjection</url>
+        </repository>
+    </distributionManagement>
+
 </project>
